@@ -33,7 +33,7 @@
 #include <libgnome/libgnome.h>
 #include <libgnomeui/gnome-ui-init.h>
 /* ---------------------------------- */
-#include <libgnomeui/gnome-thumbnail.h>
+#include <libgnomeui/gnome-desktop-thumbnail.h>
 
 static AppearanceData *
 init_appearance_data (int *argc, char ***argv)
@@ -60,7 +60,7 @@ init_appearance_data (int *argc, char ***argv)
     data = g_new (AppearanceData, 1);
     data->client = gconf_client_get_default ();
     data->xml = ui;
-    data->thumb_factory = gnome_thumbnail_factory_new (GNOME_THUMBNAIL_SIZE_NORMAL);
+    data->thumb_factory = gnome_desktop_thumbnail_factory_new (GNOME_DESKTOP_THUMBNAIL_SIZE_NORMAL);
   }
 
   return data;
