@@ -33,6 +33,8 @@ if test "x$GCC" = "xyes"; then
 fi
 changequote([,])dnl
 
+CFLAGS="$CFLAGS -DGNOME_DESKTOP_USE_UNSTABLE_API"
+
 # Internationalization support
 
 IT_PROG_INTLTOOL([0.37.1])
