@@ -1,3 +1,8 @@
+Fri Oct 24 14:44:16 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* Use GnomeDesktopThumbnailFactory instead of
+	GnomeThumbnailFactory
+
 2008-10-19  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 556977 – avoid duplicate custom keybindings
